--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <img src="" alt="" />
+    <img src="#" />
   </body>
 </html>
