--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <img src="#" />
+    <main>
+      <div class="gif-container">
+        <img src="#" />
+        <button class="refresh-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1.5"
+              d="M4 4v5h.582m15.356 2A8.001 8.001 0 0 0 4.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 0 1-15.357-2m15.357 2H15" />
+          </svg>
+        </button>
+      </div>
+      <form class="search">
+        <button type="submit" class="search-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              d="M10 4a6 6 0 1 0 0 12a6 6 0 0 0 0-12m-8 6a8 8 0 1 1 14.32 4.906l5.387 5.387a1 1 0 0 1-1.414 1.414l-5.387-5.387A8 8 0 0 1 2 10" />
+          </svg>
+        </button>
+        <input type="text" class="search-input" />
+      </form>
+    </main>
   </body>
 </html>
