Set loader svg as initial img source

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main>
       <div class="gif-container">
-        <img src="#" />
+        <img src="./img/loader.svg" />
         <button class="refresh-btn">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <path
