--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <footer>
       <div class="credit">
         Created by
-        <a href="">
+        <a href="https://github.com/JohnKelly-T">
           John Kelly
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <mask id="lineMdGithubLoop0" width="24" height="24" x="0" y="0">
